@@ -80,8 +80,8 @@
 		    <artifactId>jakarta.mail</artifactId>
 		    <version>2.0.1</version>
 		</dependency>
-		
-	</dependencies>
+
+
 
         <dependency>
             <groupId>jakarta.validation</groupId>
@@ -110,7 +110,7 @@
             <artifactId>jakarta.el</artifactId>
             <version>4.0.2</version> <!-- Phiên bản stable -->
         </dependency>
-
+    </dependencies>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -119,5 +119,16 @@
 	</properties>
 	<build>
 		<finalName>book-store-be</finalName>
-	</build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>21</source>
+                    <target>21</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
